fixed EW-77: wrong horizontal scroll in the landing page

--- a/django-website/wheelie/client/scss/layout/landing/_landing_expertise.scss
+++ b/django-website/wheelie/client/scss/layout/landing/_landing_expertise.scss
@@ -23,7 +23,6 @@
 .expertise-container-textbox {
   align-items: center;
   justify-content: center;
-  padding: 0 2.618em;
   width: 75%;
 
   @media #{$small}, #{$medium} {
